--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <p>HAVE FUN ON YOUR BIRTHDAY DEAR <333 </p>
 <p>Love You So Mucchhhhh >3< </p>
       
- <img src="images/memory1.jpg" alt="Memory 1">
+ <img src="images/memory1.jpg" alt="Pic">
     </div>
   </div>
 
@@ -28,3 +28,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
